--- a/papaya-themes/default/box_acommunity_surfer_gallery_teaser.css
+++ b/papaya-themes/default/box_acommunity_surfer_gallery_teaser.css
@@ -1,8 +1,9 @@
 .surferGalleryTeaser {
-  border: 1px #CCCCCC solid; 
-  display: block; 
+  border: 1px #CCCCCC solid;
+  display: block;
   padding: 0.3em;
   text-align: center;
+  margin-bottom: 1em;
 }
 
 .surferGalleryTeaser a.surferGalleryTeaserAddNewImages {
