--- a/papaya-themes/default/page_acommunity.css
+++ b/papaya-themes/default/page_acommunity.css
@@ -6,21 +6,17 @@
   margin-right: 1em;
   margin-bottom: 0.8em;
 }
-
 #content .surferPage .surferEmail {
   font-size: 0.87em;
 }
-
 #content .surferPage .surferGender {
   float: left;
   margin-right: 0.5em;
 }
-
 #content .surferPage .surferStatus,
 #content .surferPage .surferContact {
   margin-top: 1.2em;
 }
-
 #content .surferPage .surferDetailsGroup {
   float: left;
   width: 200px;
@@ -30,46 +26,38 @@
 /*
  CSS rules for ACommunitySurfersListPage
 */
-#content .surfersListMessage {
+#content .surfersMessage {
   margin-top: 1em;
   margin-bottom: 1em;
 }
-
-#content ul.surfersList {
+#content ul.surfers {
   list-style-type: none;
   margin-bottom: 1em;
 }
-
-#content ul.surfersList li {
+#content ul.surfers li {
  padding-left: 0 !important;
  background: none !important;
 }
-
-#content ul.surfersList li .surferAvatar,
-#content ul.surfersList li .surferDetails {
+#content ul.surfers li .surferAvatar,
+#content ul.surfers li .surferDetails {
   display: block;
   float: left;
 }
-
-#content ul.surfersList li .surferName,
-#content ul.surfersList li .surferLastTime {
+#content ul.surfers li .surferName,
+#content ul.surfers li .surferLastTime {
   display: block;
 }
-
-#content ul.surfersList li .surferAvatar {
+#content ul.surfers li .surferAvatar {
   margin-right: 0.5em;
 }
-
-#content ul.surfersList li .surferName {
+#content ul.surfers li .surferName {
   margin-top: 0.7em;
   font-size: 1.2em;
 }
-
-#content ul.surfersList li .surferCommand {
+#content ul.surfers li .surferCommand {
   margin-right: 0.7em;
 }
-
-#content .surfersListPaging {
+#content .surfersPaging {
   margin-bottom: 1em;
 }
 
@@ -104,4 +92,15 @@
 #content .messageEntry .messageTime {
   float: right;
   color: #8A8A8A;
+}
+
+/*
+ CSS rules for ACommunityNotificationSettingsPage
+*/
+#content .dialogNotficationSettingsField label {
+  float: left;
+  width: 17em;
+}
+#content .dialogNotficationSettingsField input {
+  margin-left: 0.8em;
 }
